--- a/sass/utils/_common-styles.scss
+++ b/sass/utils/_common-styles.scss
@@ -31,10 +31,16 @@ img {
 
 .title {
     font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    @media screen and (min-width: $desktop) {
+        font-size: 36px;
+        line-height: 1.17;
+        margin-bottom: 50px;
+    }
 }
 
 .visually-hidden {
@@ -56,5 +62,5 @@ img {
 
 .container {
     @extend %container;
-    // outline: 2px solid tomato;
+    outline: 2px solid tomato;
 }
