--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -1,21 +1,41 @@
 .advantages {
-    padding: 94px 0px 0px;
+    padding: 60px 0px;
+
+    @media screen and (min-width: $desktop) {
+        padding: 94px 0px 0px;
+    }
+}
+
+.advantages__list {
+    @media screen and (min-width: $tablet) {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
 }
 
 // .advantages__list {
-//     display: flex;
-// }
-
-.advantages__list{
-    @include centeredFlex();
-}
+//     @include centeredFlex();
+// } ??????????????????????//////????????????
 
 .advantages__item {
-    flex-basis: calc((100% - 90px) / 4);
-    margin-right: 30px;
+    @media screen and (max-width: 767px) {
+        &:not(:last-child){
+            margin-bottom: 30px;
+        }
+    }
 
-    &:nth-child(4n) {
-        margin-right: 0;
+    @media screen and (min-width: $tablet) {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: $desktop) {
+        flex-basis: calc((100% - 90px) / 4);
+        // margin-right: 30px;
+        
+        // &:nth-child(4n) {
+        //     margin-right: 0;
+        // }
     }
 }
 
