--- a/sass/components/_container-header.scss
+++ b/sass/components/_container-header.scss
@@ -4,5 +4,7 @@
 // }
 
 .container-header {
-    @include centeredFlex();
+    @media screen and (min-width: $tablet) {
+        @include centeredFlex($main-axis:space-between);
+    }
 }
