--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,10 @@
 .hero {
     text-align: center;
-    padding: 200px 0px;
+    padding: 118px 0px;
+
+    @media screen and (min-width: $desktop) {
+        padding: 200px 0px;
+    }
 
     max-width: 1600px;
     margin-left: auto;
@@ -19,10 +23,15 @@
     color: var(--primary-background-colour);
     font-style: normal;
     font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
+    font-size: 26px;
+    line-height: 1.62;
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
     margin-bottom: 30px;
+
+    @media screen and (min-width: $desktop) {
+        font-size: 44px;
+        line-height: 1.36;
+    }
 }
