--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,8 +2,8 @@
     color: var(--accent-colour);
     font-family: $fontLogo;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    font-size: 24px;
+    line-height: 1.17;
     text-decoration: none;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -19,5 +19,10 @@
 
     &--white {
         color: var(--primary-background-colour);
+    }
+
+    @media screen and (min-width: $desktop) {
+        font-size: 26px;
+        line-height: 1.19;
     }
 }
