--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -2,3 +2,14 @@
     background-color: #2F303A;
     padding: 60px 0px;
 }
+
+// .page-footer__container{
+//     @media screen and (min-width: $tablet) and (max-width: 1199px) {
+//         @include centeredFlex($main-axis:space-around, $cross-axis:baseline);
+//         margin-bottom: 60px;
+//     }
+
+//     @media screen and (min-width: $desktop) {
+//         @include centeredFlex($main-axis:space-around, $cross-axis:baseline);
+//     }
+// }
