--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -5,11 +5,13 @@
 
 .site-nav__list {
     @include centeredFlex();
-    margin-left: 93px;
+
+    @media screen and (min-width: $desktop) {
+        margin-left: 93px;
+    }
 }
 
-.site-nav__item:not(:last-child),
-.contacts__item:not(:last-child) {
+.site-nav__item:not(:last-child){
     margin-right: 50px;
 }
 
