--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -7,26 +7,45 @@
 // }
 
 .team__list {
-    @include centeredFlex();
+    @media screen and (min-width: $tablet) {
+        @include centeredFlex($wrap: wrap);
+        gap: 30px;
+    }
 }
 
 .team__card {
-    flex-basis: calc((100% - 90px) / 4);
-    margin-right: 30px;
+    @media screen and (max-width: 767px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+    }
+
+    @media screen and (min-width: $tablet) {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: $desktop) {
+        flex-basis: calc((100% - 90px) / 4);
+        // margin-right: 30px;
+
+        // &:nth-child(4n) {
+        //     margin-right: 0;
+        // }
+    }
 
     background-color: var(--primary-background-colour);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
-
-    &:nth-child(4n) {
-        margin-right: 0;
-    }
 }
 
 .team__information {
-    padding: 30px 32px;
+    padding: 30px 0px 24px;
+
+    @media screen and (min-width: $desktop) {
+        padding: 30px 0px;
+    }
 }
 
 .team__name {
