--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -1,11 +1,26 @@
 %section {
-    padding: 94px 0px;
+    padding: 60px 0px;
+
+    @media screen and (min-width: $desktop) {
+        padding: 94px 0px;
+    }
 }
 
 %container {
-    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
     margin-right: auto;
     margin-left: auto;
+
+    @media screen and (min-width: $mobile) {
+        width: $mobile;
+    }
+
+    @media screen and (min-width: $tablet) {
+        width: $tablet;
+    }
+
+    @media screen and (min-width: $desktop) {
+        width: $desktop;
+    }
 }
