--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -4,12 +4,38 @@
 // }
 
 .filter {
-    @include centeredFlex();
-    margin-bottom: 50px;
+    @include centeredFlex($wrap: wrap);
+    margin-bottom: 40px;
+    
+    @media screen and (max-width: 767px){
+        justify-content: flex-start;
+    }
+
+    @media screen and (min-width: $tablet) {
+        margin-bottom: 30px;
+    }
+    
+    @media screen and (min-width: $desktop) {
+        margin-bottom: 50px;
+    }
 }
 
-.filter__item:not(:last-child) {
-    margin-right: 8px;
+.filter__item{
+    &:not(:last-child) {
+        margin-right: 8px;
+    }
+
+    @media screen and (max-width: 767px){
+        &:nth-last-child(n + 3) {
+            margin-bottom: 15px;
+        }
+
+    //     margin-bottom: 15px;
+
+    //     &:nth-last-child(-n + 2) {
+    //         margin-bottom: 0;
+    //     }
+    }
 }
 
 .filter__button {
