--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -4,19 +4,34 @@
 // }
 
 .portfolio {
-    @include centeredFlex($wrap: wrap);
+    @media screen and (min-width: $tablet) {
+        @include centeredFlex($wrap: wrap, $main-axis: flex-start);
+        gap: 30px;
+    }
 }
 
 .portfolio__item {
-    flex-basis: calc((100% - 60px) / 3);
-    margin-right: 30px;
-    margin-bottom: 30px;
-
-    &:nth-child(3n) {
-        margin-right: 0;
+    &:not(:last-child){
+        @media screen and (max-width: 767px) {
+            margin-bottom: 30px;
+        }
     }
-    &:nth-last-child(-n + 3) {
-        margin-bottom: 0;
+
+    @media screen and (min-width: $tablet) {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: $desktop) {
+        flex-basis: calc((100% - 60px) / 3);
+        // margin-right: 30px;
+        // margin-bottom: 30px;
+        
+        // &:nth-child(3n) {
+        //     margin-right: 0;
+        // }
+        // &:nth-last-child(-n + 3) {
+        //     margin-bottom: 0;
+        // }
     }
 }
 
@@ -71,6 +86,11 @@
     border: 1px solid #EEEEEE;
     border-top: 0;
 }
+
+// display: flex;
+// flex-direction: column;
+// height: 100%;
+// flex-grow: 1;
 
 .portfolio__name {
     color: var(--primary-text-colour);
