--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./components/logo";
 @import "./components/site-nav";
 @import "./components/contacts";
+@import "./components/menu-button";
 @import "./components/hero";
 @import "./components/button";
 @import "./components/backdrop";
