add tablet footer

--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ img {
 }
 
 .page-header {
+  position: relative;
   border-bottom: 1px solid #ECECEC;
 }
 
@@ -301,7 +302,13 @@ img {
   }
 }
 
-.menu-button {
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
+
+.mobile-menu__button {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -312,19 +319,33 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.menu-button:hover, .menu-button:focus {
+.mobile-menu__button:hover, .mobile-menu__button:focus {
   fill: var(--accent-colour);
 }
 
-.menu-button.is-open .menu-button__icon-menu {
+.mobile-menu__button.is-open .mobile-menu__icon-menu {
   display: none;
 }
 
-.menu-button__icon-cross {
+.mobile-menu__icon-cross {
   display: none;
 }
 
-.menu-button.is-open .menu-button__icon-cross {
+.mobile-menu__button.is-open .mobile-menu__icon-cross {
+  display: block;
+}
+
+.mobile-menu__container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  padding: 48px 40px;
+  background-color: var(--primary-background-colour);
+}
+
+.mobile-menu__container.is-open {
   display: block;
 }
 
@@ -638,6 +659,7 @@ img {
 }
 
 .form__checkbox-link {
+  margin-left: 2px;
   font-size: 12px;
   line-height: 1.17;
   color: var(--accent-colour);
@@ -1045,6 +1067,25 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .container-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .container-footer {
     display: -webkit-box;
@@ -1097,6 +1138,12 @@ img {
   color: var(--accent-colour);
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .subscribtion {
+    margin-top: 60px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .subscribtion {
     display: -webkit-box;
@@ -1127,7 +1174,7 @@ img {
 }
 
 .subscribtion__input {
-  min-width: 358px;
+  width: 100%;
   padding: 15px 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -1138,6 +1185,18 @@ img {
   color: var(--primary-background-colour);
   -webkit-transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) and (max-width: 1199px) {
+  .subscribtion__input {
+    min-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribtion__input {
+    min-width: 358px;
+  }
 }
 
 .subscribtion__label:focus-within .subscribtion__input {
@@ -1185,12 +1244,17 @@ img {
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   padding: 10px 28px;
-  margin-left: 12px;
 }
 
 @media screen and (max-width: 1199px) {
   .subscribtion__button {
     margin-top: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribtion__button {
+    margin-left: 12px;
   }
 }
 
@@ -1214,6 +1278,7 @@ img {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  gap: 15px 8px;
   margin-bottom: 40px;
 }
 
@@ -1234,16 +1299,6 @@ img {
 @media screen and (min-width: 1200px) {
   .filter {
     margin-bottom: 50px;
-  }
-}
-
-.filter__item:not(:last-child) {
-  margin-right: 8px;
-}
-
-@media screen and (max-width: 767px) {
-  .filter__item:nth-last-child(n + 3) {
-    margin-bottom: 15px;
   }
 }
 
@@ -1324,7 +1379,14 @@ img {
 }
 
 .portfolio__link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1378,6 +1440,9 @@ img {
 }
 
 .portfolio__meta {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid #EEEEEE;
   border-top: 0;
