--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -151,6 +151,8 @@
 }
 
 .form__checkbox-link {
+    margin-left: 2px;
+
     font-size: 12px;
     line-height: 1.17;
     color: var(--accent-colour);
