--- a/sass/components/_filter.scss
+++ b/sass/components/_filter.scss
@@ -5,6 +5,7 @@
 
 .filter {
     @include centeredFlex($wrap: wrap);
+    gap: 15px 8px;
     margin-bottom: 40px;
     
     @media screen and (max-width: 767px){
@@ -20,23 +21,23 @@
     }
 }
 
-.filter__item{
-    &:not(:last-child) {
-        margin-right: 8px;
-    }
+// .filter__item{
+//     &:not(:last-child) {
+//         margin-right: 8px;
+//     }
 
-    @media screen and (max-width: 767px){
-        &:nth-last-child(n + 3) {
-            margin-bottom: 15px;
-        }
+//     @media screen and (max-width: 767px){
+//         &:nth-last-child(n + 3) {
+//             margin-bottom: 15px;
+//         }
 
-    //     margin-bottom: 15px;
+//     //     margin-bottom: 15px;
 
-    //     &:nth-last-child(-n + 2) {
-    //         margin-bottom: 0;
-    //     }
-    }
-}
+//     //     &:nth-last-child(-n + 2) {
+//     //         margin-bottom: 0;
+//     //     }
+//     }
+// }
 
 .filter__button {
     display: inline-block;
