--- a/sass/components/_projects.scss
+++ b/sass/components/_projects.scss
@@ -36,7 +36,9 @@
 }
 
 .portfolio__link {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -82,15 +84,11 @@
 }
 
 .portfolio__meta {
+    flex-grow: 1;
     padding: 20px 24px;
     border: 1px solid #EEEEEE;
     border-top: 0;
 }
-
-// display: flex;
-// flex-direction: column;
-// height: 100%;
-// flex-grow: 1;
 
 .portfolio__name {
     color: var(--primary-text-colour);
