--- a/sass/components/_subscribtion-form.scss
+++ b/sass/components/_subscribtion-form.scss
@@ -4,6 +4,10 @@
 // }
 
 .subscribtion {
+    @media screen and (min-width: $tablet) and (max-width: 1199px){
+        margin-top: 60px;
+    }
+
     @media screen and (min-width: $desktop) {
         @include centeredFlex($cross-axis:flex-end);
     }
@@ -19,7 +23,16 @@
 }
 
 .subscribtion__input {
-    min-width: 358px;
+    width: 100%;
+
+    @media screen and (min-width: $mobile) and (max-width: 1199px){
+        min-width: 450px;
+    }
+
+    @media screen and (min-width: $desktop) {
+        min-width: 358px;
+    }
+
     padding: 15px 16px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -53,7 +66,10 @@
     @include centeredFlex($type:inline-flex);
 
     padding: 10px 28px;
-    margin-left: 12px;
+
+    @media screen and (min-width: $desktop) {
+        margin-left: 12px;
+    }
 }
 
 .subscribtion__icon {
