--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -40,6 +40,11 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
+// .team__thumb{
+//     // outline: 1px solid blue;
+//     // // width: 100%;
+// }
+
 .team__information {
     padding: 30px 0px 24px;
 
