--- a/sass/components/_advantages.scss
+++ b/sass/components/_advantages.scss
@@ -8,15 +8,10 @@
 
 .advantages__list {
     @media screen and (min-width: $tablet) {
-        display: flex;
-        flex-wrap: wrap;
+        @include centeredFlex($cross-axis:stretch, $wrap: wrap);
         gap: 30px;
     }
 }
-
-// .advantages__list {
-//     @include centeredFlex();
-// } ??????????????????????//////????????????
 
 .advantages__item {
     @media screen and (max-width: 767px) {
