--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -110,7 +110,7 @@
 .form__checkbox-label {
     // display: flex;
     // align-items: center;
-    @include centeredFlex($main-axis:flex-start);
+    @include centeredFlex();
     
     font-size: 12px;
     line-height: 1.17;
@@ -124,8 +124,6 @@
 
 .form__checkbox-input {
     appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
 
     position: absolute;
 }
@@ -134,7 +132,6 @@
     fill: var(--primary-background-colour);
     border: 2px solid var(--primary-text-colour);
     border-radius: 2px;
-    margin-left: 13px;
     margin-right: 7px;
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -151,8 +148,6 @@
 }
 
 .form__checkbox-link {
-    margin-left: 2px;
-
     font-size: 12px;
     line-height: 1.17;
     color: var(--accent-colour);
