--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -3,9 +3,11 @@
     top: 0;
     left: 0;
     z-index: 1;
+    overflow-y: scroll;
 
     width: 100vw;
     height: 100vh;
+    padding: 93px 15px;
 
     background-color: rgba(0, 0, 0, 0.2);
 
