--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -1,11 +1,13 @@
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    position: relative;
 
-    min-width: 450px;
-    min-height: 609px;
+    transform: scale(1);
+
+    .backdrop.is-hidden &{
+        transform: scale(0.9);
+    }
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     background-color: var(--primary-background-colour);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -13,11 +15,54 @@
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    // position: absolute;
+    // top: 50%;
+    // left: 50%;
+    // transform: translate(-50%, -50%) scale(1);
 
-    .backdrop.is-hidden &{
-        transform: translate(-50%, -50%) scale(0.9);
+    // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    // .backdrop.is-hidden &{
+    //     transform: translate(-50%, -50%) scale(0.9);
+    // }
+
+    // min-width: 450px;
+    // min-height: 609px;
+
+    @media screen and (min-width: $mobile) {
+        min-width: 450px;
+        min-height: 609px;
+
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
+
+        // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        // .backdrop.is-hidden &{
+        //     transform: translate(-50%, -50%);
+        // }
     }
+
+    @media screen and (min-width: $tablet) {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+        .backdrop.is-hidden &{
+            transform: translate(-50%, -50%);
+        }
+    }
+    
+    @media screen and (min-width: $desktop) {
+        min-width: 528px;
+        min-height: 581px;
+    }
+
 }
 
 .modal__button {
