--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -4,9 +4,16 @@
 // }
 
 .contacts {
+    @media screen and (max-width: 767px){
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 32px;
+        margin-bottom: 64px;
+    }
+
     @media screen and (min-width: $desktop) {
         @include centeredFlex();
-        margin-left: auto;
+        // margin-left: auto;
     }
 }
 
@@ -30,8 +37,8 @@
 
     color: var(--secondary-text-colour);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 24px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -40,9 +47,31 @@
     &:focus{
         color: var(--accent-colour);
     }
+
+    @media screen and (max-width: 767px) {
+        &--big{
+            font-size: 34px;
+            line-height: 1.18;
+            color: var(--accent-colour);
+
+            &:hover,
+            &:focus{
+                color: #188CE8;
+            }
+        }
+    }
+
+    @media screen and (min-width: $tablet) {
+        font-size: 14px;
+        line-height: 1.14;
+    }
 }
 
 .contacts__icon {
+    @media screen and (max-width: 767px){
+        display: none;
+    }
+
     margin-right: 8px;
     fill: currentColor;
 
