--- a/sass/components/_container-header.scss
+++ b/sass/components/_container-header.scss
@@ -4,7 +4,9 @@
 // }
 
 .container-header {
-    @media screen and (min-width: $tablet) {
-        @include centeredFlex($main-axis:space-between);
+    @include centeredFlex();
+
+    @media screen and (max-width: 767px) {
+        justify-content: space-between;
     }
 }
