--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -17,6 +17,10 @@
     &:focus{
         fill: var(--accent-colour);
     }
+
+    @media screen and (min-width: $tablet) {
+        display: none;
+    }
 }
 
 .mobile-menu__icon-menu{
@@ -34,15 +38,23 @@
 }
 
 .mobile-menu__container{
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding: 48px 40px;
-    background-color: var(--primary-background-colour);
+    @media screen and (max-width: 767px) {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        // height: 100vh;
+        padding: 48px 40px;
+        background-color: var(--primary-background-colour);
 
-    &.is-open{
+        &.is-open{
         display: block;
+        }
+    }
+
+    @media screen and (min-width: $tablet) {
+        @include centeredFlex($main-axis:space-between);
+        flex-grow: 1;
     }
 }
