--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -4,26 +4,43 @@
 // }
 
 .site-nav__list {
-    @include centeredFlex();
+    @media screen and (max-width: 767px){
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        margin-bottom: 302px;
+    }
+
+    @media screen and (min-width: $tablet) {
+        @include centeredFlex();
+        margin-left: 88px;
+    }
 
     @media screen and (min-width: $desktop) {
         margin-left: 93px;
     }
 }
 
-.site-nav__item:not(:last-child){
-    margin-right: 50px;
+.site-nav__item{
+    &:not(:last-child){
+        @media screen and (min-width: $tablet) {
+        margin-right: 50px;
+        }
+    }
 }
 
 .site-nav__link {
     display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+
+    @media screen and (min-width: $tablet) {
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
 
     color: var(--primary-text-colour);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 40px;
+    line-height: 1.18;
     letter-spacing: 0.02em;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -34,11 +51,18 @@
     }
 
     &--current{
-        position: relative;
         color: var(--accent-colour);
     }
 
-    &--current::after{
+    @media screen and (min-width: $tablet) {
+        font-size: 14px;
+        line-height: 1.14;
+
+        &--current{
+        position: relative;
+        }
+
+        &--current::after{
         position: absolute;
         bottom: -2px;
         left: 0;
@@ -48,5 +72,6 @@
         height: 4px;
         border-radius: 2px;
         background-color: var(--accent-colour);
+        }
     }
 }
