--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,9 +6,10 @@
 @import "./components/page-header";
 @import "./components/container-header";
 @import "./components/logo";
+@import "./components/mobile-menu";
 @import "./components/site-nav";
 @import "./components/contacts";
-@import "./components/mobile-menu";
+@import "./components/social-platform";
 @import "./components/hero";
 @import "./components/button";
 @import "./components/backdrop";
