--- a/sass/utils/_breakpoints.scss
+++ b/sass/utils/_breakpoints.scss
@@ -8,3 +8,5 @@ $desktop: 1200px;
 // @media screen and (min-width: $tablet) {}
 
 // @media screen and (min-width: $desktop) {}
+
+// @media screen and (min-width: $tablet) and (max-width: 1199px){}
