--- a/css/main.css
+++ b/css/main.css
@@ -168,9 +168,42 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 767px) {
   .mobile-menu {
     display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    padding: 48px 40px;
+    background-color: var(--primary-background-colour);
+  }
+  .mobile-menu.is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -205,44 +238,6 @@ img {
 
 .mobile-menu__button.is-open .mobile-menu__icon-cross {
   display: block;
-}
-
-@media screen and (max-width: 767px) {
-  .mobile-menu__container {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding: 48px 40px;
-    background-color: var(--primary-background-colour);
-  }
-  .mobile-menu__container.is-open {
-    display: block;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .mobile-menu__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
-  }
 }
 
 @media screen and (max-width: 767px) {
@@ -470,13 +465,21 @@ img {
           align-items: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  gap: 20px;
 }
 
 @media screen and (min-width: 768px) {
   .social-platform {
     display: none;
   }
+}
+
+.social-platform__item:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  padding-right: 10px;
+}
+
+.social-platform__item:not(:first-child) {
+  padding-left: 10px;
 }
 
 .social-platform__link {
@@ -491,21 +494,6 @@ img {
 
 .social-platform__link:hover, .social-platform__link:focus {
   color: #188CE8;
-}
-
-.social-platform__link--line {
-  position: relative;
-}
-
-.social-platform__link--line::after {
-  content: "";
-  position: absolute;
-  display: inline-block;
-  top: 0;
-  left: 0;
-  width: 1px;
-  height: 100%;
-  background-color: rgba(33, 33, 33, 0.2);
 }
 
 .hero {
