--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,6 +1,23 @@
 .mobile-menu{
-    @media screen and (min-width: $tablet){
+    @media screen and (max-width: 767px) {
         display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        z-index: 1;
+
+        padding: 48px 40px;
+        background-color: var(--primary-background-colour);
+
+        &.is-open{
+        display: block;
+        }
+    }
+
+    @media screen and (min-width: $tablet) {
+        @include centeredFlex($main-axis:space-between);
+        flex-grow: 1;
     }
 }
 
@@ -34,26 +51,5 @@
 
     .mobile-menu__button.is-open &{
         display: block;
-    }
-}
-
-.mobile-menu__container{
-    @media screen and (max-width: 767px) {
-        display: none;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        width: 100%;
-        padding: 48px 40px;
-        background-color: var(--primary-background-colour);
-
-        &.is-open{
-        display: block;
-        }
-    }
-
-    @media screen and (min-width: $tablet) {
-        @include centeredFlex($main-axis:space-between);
-        flex-grow: 1;
     }
 }
