--- a/css/main.css
+++ b/css/main.css
@@ -108,7 +108,6 @@ img {
 }
 
 .page-header {
-  position: relative;
   border-bottom: 1px solid #ECECEC;
 }
 
@@ -175,12 +174,22 @@ img {
     top: 0;
     left: 0;
     width: 100%;
+    height: 100%;
     z-index: 1;
     padding: 48px 40px;
     background-color: var(--primary-background-colour);
   }
   .mobile-menu.is-open {
-    display: block;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -252,7 +261,6 @@ img {
         -ms-flex-direction: column;
             flex-direction: column;
     gap: 32px;
-    margin-bottom: 302px;
   }
 }
 
@@ -370,7 +378,7 @@ img {
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 1200px) and (max-width: 1199px) {
   .contacts__item:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -484,6 +492,18 @@ img {
   padding-left: 10px;
 }
 
+@media screen and (min-width: 359px) and (max-width: 439px) {
+  .social-platform__item:last-child {
+    padding-left: 0;
+  }
+}
+
+@media screen and (min-width: 264px) and (max-width: 358px) {
+  .social-platform__item:nth-child(3n) {
+    padding-left: 0;
+  }
+}
+
 .social-platform__link {
   font-weight: 500;
   font-size: 18px;
@@ -565,7 +585,7 @@ img {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 3;
   overflow-y: scroll;
   width: 100vw;
   height: 100vh;
