--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -18,7 +18,7 @@
 }
 
 .contacts__item:not(:last-child) {
-    @media screen and (max-width: 1199px) {
+    @media screen and (min-width: $desktop) and (max-width: 1199px) {
         margin-bottom: 10px;
     }
 
