--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -5,13 +5,16 @@
         top: 0;
         left: 0;
         width: 100%;
+        height: 100%;
         z-index: 1;
 
         padding: 48px 40px;
         background-color: var(--primary-background-colour);
 
         &.is-open{
-        display: block;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
         }
     }
 
